# UDP_Async_client-server

./: CMakeLists.txt  README.md
libs/: LNL.cpp  LNL.h
src/: error.cpp  error.hpp
src/client/: baseclient.cpp  baseclient.hpp  main_client.cpp  tcpclient.cpp  tcpclient.hpp  udpclient.cpp  udpclient.hpp
src/server/: baseserver.cpp  baseserver.hpp  dataconverter.hpp  main_server.cpp  numbersgetter.cpp  numbersgetter.hpp  tcpserver.cpp  tcpserver.hpp  udpserver.cpp  udpserver.hpp
